# rust_backend

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-0391549f22d9e0e39eaa1ea19a66e4b9a3390d73287f5b045e8fbbedad65ea00.json  query-063880b3fcb503e02bd22e16344b1230f77089588db81da0dda0ff2c6b7d2003.json  query-07f97fe2e219251cb906c4f072e8c6b211e3256a5808272a37b5a86aed3a094d.json  query-09446c504c7486b1a89bee4557f523100c009c5cb11b07e458ad1dcba289bad3.json  query-0b0f0d20c42000d5137648fc98c32bf4723c7ccf55e8d45fd66fe5fbf2274e71.json  query-0ff57f9722a94822c5bd62922b5ef9a19f5ee1ccc0352abbde6a49bb94533c55.json  query-116c914b412c8aea193cc1e063f75e7e16a22b4d6f5a4ca1d184245ffa4e859d.json  query-16a061a4d9d0642f192ecd61ac8e0e07158eee1cc559cf13c4aea62e447fd734.json  query-19bb65a7f7ccb4d366237b044f01556d20e62ef641fb5bfd730620470c512ddf.json  query-1ad0fe74004c4216872e81abbe73ee27c12390d231ef04e9142abfa6fd98bf98.json  query-1faed438c2d507e67fc6aeb93543e121a2627a940038a42b85443677fc383297.json  query-21545e308db974ceb3751f892627e616be94c1063a69a882ca5991a16c6c356e.json  query-25f78d6b11aea874a884974a8f82c134ab7a3323d44098892a86bc5aa558d1ff.json  query-27d83fb2ec449fea651303b2531968369e75b8bcf90b707cd3ec4faa3876c1e0.json  query-2a715546f2fa5a34027a48395360ac2258f184d7c813aad46f4b389f55c72ba0.json  query-405d3c3059afbb01215a21654b48f28d39a0d07112202744a3af3c78293bf9ef.json  query-4517f43270d23e621140023d998fd547d565a12587bb7e7fa24e9d51c03c7e70.json  query-4e4cf4eff6024cee6d149c627ca86a594323ef6731cb1f42aa799ff28c40f6cc.json  (+42 more)
src/: auth.rs  config.rs  error.rs  main.rs
(+33 files in other folders)
