[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
awc = "3.6.0"
chrono = "0.4.40"
config = "0.15.11"
dotenv = "0.15.0"
reqwest = "0.12.15"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["postgres","runtime-tokio-native-tls","macros","migrate","offline"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.13.0"
uuid = "1.16.0"
